# citescoop

./: .clang-tidy  .codespellrc  .editorconfig  BUILDING.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  REUSE.toml  SECURITY.md  _2home_2runner_2work_2citescoop_2citescoop_2include_2citescoop_2parser_8h-example.html  about.html  about_8dox.html  annotated.html  citescoop_8h.html  classexported__class.html  classwikiopencite_1_1citescoop_1_1Bz2Extractor.html  classwikiopencite_1_1citescoop_1_1DumpParseException.html  classwikiopencite_1_1citescoop_1_1Extractor.html  classwikiopencite_1_1citescoop_1_1MessageReader.html  classwikiopencite_1_1citescoop_1_1MessageWriter.html  classwikiopencite_1_1citescoop_1_1Parser.html  classwikiopencite_1_1citescoop_1_1TemplateParseException.html  classwikiopencite_1_1citescoop_1_1TextExtractor.html  classwikiopencite_1_1citescoop_1_1openalex_1_1SnapshotProcessor.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_d4cc1f52f322ec3925d81e3339fbe543.html  dir_ef3b2545113449f8f25e623a543d64e3.html  extract_8h.html  files.html  index.html  io_8h.html  modules.html  namespaces.html  namespacestd.html  namespacewikiopencite.html  namespacewikiopencite_1_1citescoop.html  namespacewikiopencite_1_1citescoop_1_1openalex.html  openalex_8h.html  pages.html  (+6 more)
.github/workflows/: ci.yml  tidy.json
cmake/: dev-mode.cmake  gperf.cmake  install-config.cmake  install-rules.cmake  variables.cmake
include/citescoop/: citescoop.h  extract.h  io.h  openalex.h  parser.h
scripts/: lint.sh
src/: citescoop.cc  citescoop.h  extract.cc  langmap.cc  langmap.h  languages.gperf  languages.gperf.license
src/cli/: cli.cc  cli.h  main.cc
src/cli/commands/: base_command.cc  base_command.h  extract_command.h
src/extract/: base_extractor.h  bz2extractor.cc  bz2extractor_impl.cc  bz2extractor_impl.h  dump_parser.cc  dump_parser.h  exceptions.cc  extractor.cc  streaming_dump_parser.cc  streaming_dump_parser.h  textextractor.cc  textextractor_impl.cc  textextractor_impl.h
src/openalex/: snapshot_processor.cc  snapshot_processor_impl.cc  snapshot_processor_impl.h
src/parser/: exceptions.cc  parser.cc  parser_impl.cc  parser_impl.h
src/proto/: README.md  citation.proto  citation_group.proto  extracted_citation.proto  identifiers.proto  language.proto  revision.proto  revision_citations.proto  revisions_group.proto  url.proto
test/: CMakeLists.txt
test/src/: citescoop_test.cc  io_test.cc  parser_test.cc  util.h
test/src/extract/: bz2extractor_test.cc  extractor_test.cc  textextractor_test.cc  util.h
test/src/extract/data/: malformed.xml  multiple-pages.xml  multiple-revision-citation-removed.xml  multiple-revision-not-chronological.xml  multiple-revision-order-not-by-id.xml  multiple-revision-same-timestamp.xml  orphaned-revision-included.xml  single-revision-single-citation.xml  single-revision-single-citation.xml.bz2
test/src/openalex/: snapshot_processor_test.cc
test/src/openalex/data/: diff-counts.jsonl  extra-whitespace.jsonl  invalid-lang.jsonl  missing-fields.jsonl  multi-oa.jsonl  single-line.jsonl
test/src/parser/: parser_test.cc
